--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,8 +5,8 @@
 
         <title>{{ page.title }}</title>
 
-        <meta name="author" content="{{ site.author }}" />
-        <meta name="description" content="{{ page.description }} - {{ site.author }}" />
+        <meta name="author" content="{{ site.author.name }}" />
+        <meta name="description" content="{{ page.description }} - {{ site.author.name }}" />
         <meta name="keywords" content="olivier, dolbeau, blog, Symfony2" />
 
         <link rel="stylesheet" type="text/css" href="/assets/css/base.css" media="all" />
@@ -17,7 +17,7 @@
         <!--[if lt IE9]><script src="/js/html5-ie.js"></script><![endif]-->
 
         {% if site.feedburner %}
-            <link rel="alternate" type="application/rss+xml" href="http://feeds.feedburner.com/{{ site.feedburner.id }}" title="RSS Feed - {{ site.author }}">
+            <link rel="alternate" type="application/rss+xml" href="http://feeds.feedburner.com/{{ site.feedburner.id }}" title="{{ site.rss.title }}">
         {% endif %}
 
         {% if site.google_analytics %}
