Update title link

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -41,7 +41,7 @@
         {% endif %}
         <div id="wrapper">
             <header role="banner">
-                <div id="site-title"><a href="/index.html">{{ site.title }}</a></div>
+                <div id="site-title"><a href="/">{{ site.title }}</a></div>
                 <div id="site-description">{{ site.description }}</div>
             </header>
             <div id="content">
