--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: base
     <header>
         <h1 itemprop="name">{{ page.title }}</h1>
         <p class="meta">
-            on <time itemprop="datePublished" datetime="{{ page.date | date: '%Y-%m-%d' }}">
+            <time itemprop="datePublished" datetime="{{ page.date | date: '%Y-%m-%d' }}">
                 {{ page.date | date_to_long_string }}
             </time>
         </p>
