--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,21 +14,25 @@ layout: base
     <div itemprop="articleBody">
         {{ content }}
 
-        <p>
-            <em class="fork-and-edit">
-                Found a typo ? <a href="http://github.com/odolbeau/odolbeau.github.com/edit/master/_posts/{{ page.date | date: "%Y-%m-%d" }}-{{ page.title | remove: " -" | replace: " ", "-" | downcase }}.md">Fork and edit this post</a> would be really great. :D Thanks in advance !
-            </em>
-        </p>
+        <div class="alert alert-info">
+            <h4>It's only the beginning!</h4>
+            <p>
+                You want to react to this post? You can do it <a href="https://twitter.com/odolbeau">on twitter</a>! :)<br />
+            </p>
+            <p>
+                Found a typo? <a href="http://github.com/odolbeau/odolbeau.github.com/edit/master/_posts/{{ page.date | date: "%Y-%m-%d" }}-{{ page.title | remove: " -" | replace: " ", "-" | downcase }}.md">Fork and edit this post</a> would be really great. :D Thanks in advance!<br />
+                {% if site.related_posts != empty %}
+            </p>
+            <p>
+                Finally, you might be interested by those related articles:
+                <ul>
+                    {% for post in site.related_posts limit: 3 %}
+                        <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+                    {% endfor %}
+                </ul>
+                {% endif %}
+            </p>
+        </div>
+
     </div>
 </article>
-
-{% if site.related_posts != empty %}
-    <div id="related-posts">
-        <span class="underline">Related posts:</span>
-        <ul>
-            {% for post in site.related_posts limit: 3 %}
-                <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-            {% endfor %}
-        </ul>
-    </div>
-{% endif %}
