Add piwik tracking code

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -28,6 +28,23 @@
         {% if site.feedburner %}
             <link rel="alternate" type="application/rss+xml" href="http://feeds.feedburner.com/{{ site.feedburner.id }}" title="{{ site.rss.title }}">
         {% endif %}
+
+        <!-- Piwik -->
+        <script type="text/javascript">
+            var _paq = _paq || [];
+            _paq.push(["setDomains", ["*.odolbeau.fr"]]);
+            _paq.push(['trackPageView']);
+            _paq.push(['enableLinkTracking']);
+            (function() {
+                var u="//piwik.babounet.com/";
+                _paq.push(['setTrackerUrl', u+'piwik.php']);
+                _paq.push(['setSiteId', 2]);
+                var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+                g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+            })();
+        </script>
+        <noscript><p><img src="//piwik.babounet.com/piwik.php?idsite=2" style="border:0;" alt="" /></p></noscript>
+        <!-- End Piwik Code -->
     </head>
     <body>
         {% if site.github %}
