--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -26,7 +26,7 @@
         <!--[if lt IE9]><script src="/js/html5-ie.js"></script><![endif]-->
 
         {% if site.feedburner %}
-            <link rel="alternate" type="application/rss+xml" href="http://feeds.feedburner.com/{{ site.feedburner.id }}" title="{{ site.rss.title }}">
+            <link rel="alternate" type="application/rss+xml" href="//feeds.feedburner.com/{{ site.feedburner.id }}" title="{{ site.rss.title }}">
         {% endif %}
 
         <!-- Piwik -->
@@ -48,7 +48,7 @@
     </head>
     <body>
         {% if site.github %}
-            <a href="http://github.com/{{ site.github.username }}/{{ site.github.blog_repo }}"><img style="position: absolute; top: 0; right: 0; border: 0;" src="{{ '/assets/images/github.png' | asset_url }}" alt="Fork me on GitHub" /></a>
+            <a href="//github.com/{{ site.github.username }}/{{ site.github.blog_repo }}"><img style="position: absolute; top: 0; right: 0; border: 0;" src="{{ '/assets/images/github.png' | asset_url }}" alt="Fork me on GitHub" /></a>
         {% endif %}
         <div id="wrapper">
             <header role="banner">
@@ -60,12 +60,12 @@
             </div>
             <div id="footer">
                 <div id="col-left">
-                    <a rel="license" href="http://creativecommons.org/licenses/by-nc/2.0/fr/">
-                        <img alt="Licence Creative Commons" src="http://i.creativecommons.org/l/by-nc/2.0/fr/80x15.png" width="80" height="15" />
+                    <a rel="license" href="//creativecommons.org/licenses/by-nc/2.0/fr/">
+                        <img alt="Licence Creative Commons" src="//i.creativecommons.org/l/by-nc/2.0/fr/80x15.png" width="80" height="15" />
                     </a>
                 </div>
                 <div id="col-right">
-                    <p>Powered by <a href="http://jekyllrb.com/" title="Jekyll official website">Jekyll</a></p>
+                    <p>Powered by <a href="//jekyllrb.com/" title="Jekyll official website">Jekyll</a></p>
                 </div>
             </div>
         </div>
